--- a/about.html
+++ b/about.html
@@ -3,5 +3,6 @@
 <body>
   <h1> Changing Fashion 1 Shoe at a Time </h1>
   <p> In 1978, Paris Fashion Week was at its peek. Fashion designers Amina Ashour, Julia Humphrey and Shannon Maynard attended shows from the time they got there till the time they left. </p>
-  </body>
-  </html> 
+  <p> This website is all about our experience as designers in Paris </p>
+</body>
+  </html>
